--- a/_config.yml
+++ b/_config.yml
@@ -1,7 +1,9 @@
-title: Your awesome title
-author: GitHub User
+title: Women Basketball World
+author: Gisela Sanchez
 email: your-email@domain.com
-description: > # this means to ignore newlines until "baseurl:"
+theme: minima
+description: En aquest Blog parlaré sobre les notícies més recents del bàsquet femení, així com de la informació sobre les jugadores i els resultats de les lligues més importants.
+També explicaré curiositats i anècdotes d'aquest món. > # this means to ignore newlines until "baseurl:"
   Write an awesome description for your new site here. You can edit this
   line in _config.yml. It will appear in your document head meta (for
   Google search results) and in your feed.xml site description.
